--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                     <h3><input type="number" id="splslt7" min="0" class="num"></h3>
                     <h3><input type="number" id="splslt8" min="0" class="num"></h3>
                     <h3><input type="number" id="splslt9" min="0" class="num"></h3>
+                    <h3><input type="number" id="splslt10" min="0" class="num"></h3>
                 </div>
                 <div class="list">
                     <h2>Coven Slots</h2>
@@ -167,6 +168,7 @@
                     <h3>Dispel Magic</h3>
                     <h3>Fireball</h3>
                     <h3>Life Transference</h3>
+                    <h3>Linked Glyphs</h3>
                     <h3>Melf's Minute Meteors</h3>
                     <h3>Revivify</h3>
                     <h3>Spirit Shroud</h3>
@@ -333,6 +335,7 @@
                     <h3>Spell Sniper</h3>
                     <h3>Linguist</h3>
                     <h3>Flash Recall</h3>
+                    <h3>Mage Slayer</h3>
                 </div>
                 <div class="list">
                     <h2>Invocations</h2>
@@ -344,6 +347,11 @@
                     <h3>Witch Sight</h3>
                     <h3>Eldritch Spear</h3>
                     <h3>Kiss of Mephistopheles</h3>
+                </div>
+                <div class="list">
+                    <h2>Epic Boons</h2>
+                    <h3>Boon of Multisubclass x3</h3>
+                    <h3>Boon of Even Higher Magic</h3>
                 </div>
             </div>
         </main>
