--- a/embra.html
+++ b/embra.html
@@ -18,6 +18,7 @@
             <div class="inline">
                 <h2>Hit Dice: <input type="number" id="embHitDice" class="num"></h2>
                 <h2 id="embProf"></h2>
+                <h2 id="embSpd"></h2>
             </div>
             <div class="inline">
                 <div class="abil">
