--- a/feature.html
+++ b/feature.html
@@ -104,7 +104,7 @@
                     Starting at 6th level, your link to the Celestial allows you to serve as a conduit for radiant energy. You have resistance to radiant damage, and when you cast a spell that deals radiant or fire damage, you add your Charisma modifier to one radiant or fire damage roll of that spell against one of its targets. You can also add your Charisma modifier to healing spells if you didn't already, or double your modifier if you already did. You do not ignore your own resistance to radiant damage.
                 </details>
             </div>
-            <div id="sato">
+            <div id="seto">
                 <details><br>
                     <summary>
                         Seraphim's Touch
@@ -119,7 +119,7 @@
                     Starting at 10th level, you can as a bonus, or as part of the same bonus action that you used Healing Light on, you and a number of creatures you choose equal to your Charisma modifier that you can see to become protected by the Seraphim, causing all fire or radiant damage dealt by you to instead heal them. This lasts until the start of your next turn.<br><br>This feature can be used 3 times, and you regain all uses back on a long rest.
                 </details>
             </div>
-            <div id="satr">
+            <div id="setr">
                 <details><br>
                     <summary>
                         Seraph Transformation
@@ -138,6 +138,116 @@
                         </ul>
                     </summary>
                     Starting at 14th level, as bonus action, or as part of the same bonus action to activate any other transformation, you can transform yourself into a partial angel. When first transforming, you heal to your max HP.  You have immunity to Radiant damage, and resistance to non-magical physical damage. You gain a flying speed equal to your walking speed, and your walking speed increases by 30 feet. Your Wisdom and intelligence scores increase by 2, you have advantage on Charisma checks against non-demons or fiends, and you count as one size larger when determining grappling and carry weight. As a reaction you can give yourself a +5 to a saving throw. If this bonus causes you to succeed, you can move up to your walking speed immediately. This transformation has a duration of 1 minute, which you can stop as another bonus action. Stopping the transformation early saves the remaining time left in the transformation for later. While in firmament, the transformation timer is paused.<br><br>You regain the full duration for the transformation back on a short or long rest.
+                </details>
+            </div>
+            <div id="nody">
+                <details><br>
+                    <summary>
+                        Not Dead Yet
+                        <ul>
+                            <li>advantage on death saves</li>
+                            <li>die at 5 fails</li>
+                            <li>resistance to necrotic</li>
+                        </ul>
+                    </summary>
+                    You have advantage on Death Saving throws, need to fail 5 Death Saving throws to die, and are Resistant to Necrotic damage. You also gain proficiency in a saving throw of your choice.
+                </details>
+            </div>
+            <div id="sofi">
+                <details><br>
+                    <summary>
+                        Soul Fire
+                        <ul>
+                            <li>necrotic dmg can convert to fire</li>
+                            <li>necrotic fire dmg heals self</li>
+                        </ul>
+                    </summary>
+                    When you deal Necrotic damage, you can choose to change the damage type to Fire. Any Necrotic damage you change to fire damage heals you.
+                </details>
+            </div>
+            <div id="untf">
+                <details><br>
+                    <summary>
+                        Undying Transformation
+                        <ul>
+                            <li>activates on bonus action or as a reaction to going down or making a death saving throw</li>
+                            <li>failed death saves reset to 0</li>
+                            <li>stay conscious at 0 hp</li>
+                            <li>immunity to necrottic and resistance to nonmagical physical</li>
+                            <li>become invisible to undead at will</li>
+                            <li>become visible to undead you dmg until start of its next turn</li>
+                            <li>1min duration regained on short/long rest</li>
+                            <li>duration paused while at 0 hp</li>
+                        </ul>
+                    </summary>
+                    Starting at 10th level, as bonus action or as a reaction to going down or making a Death Saving throw, you can transform into your undying form. When first transforming, your failed Death saving throws are reset to 0. While you're transformed, having 0 hit points doesn’t knock you unconscious. You still must make death saving throws, and you suffer the normal effects of taking damage while at 0 hit points, and 5 Death Saving throws can still kill you. While transformed, You have immunity to Necrotic damage, and resistance to non-magical physical damage. As long as you will it, you become invisible to all undead creatures without True sight. If you damage an undead creature while invisible to it in this way, you become visible to the creature until the start of its next turn. This transformation has a duration of 1 minute, which you can stop as another bonus action. Stopping the transformation early saves the remaining time left in the transformation for later. While at 0 HP, the transformation timer is paused.<br><br>You regain the full duration for the transformation and gain your Failed Death saving throw reset back on a short or long rest.
+                </details>
+            </div>
+            <div id="yoce">
+                <details><br>
+                    <summary>
+                        Your Contract has Expired
+                        <ul>
+                            <li>activates on action</li>
+                            <li>targets single creature withn 120ft range</li>
+                            <li>time stops for self and target for 1 min</li>
+                            <li>target must accept or deny given contract</li>
+                        </ul>
+                    </summary>
+                    As an action, you pick a single creature within 120 feet of you that you can see then pick a contract to offer to them. Time stops for all creatures except you and the chosen creature. Both you and the creature cannot move, take actions, or otherwise interact with other creatures or objects during this time. The chosen creature has 1 minute in this frozen time span to either deny or accept the Contract. If the creature does not make a choice, they are counted as having denied it. After the creatures choice, time resumes as normal.
+                </details>
+            </div>
+            <div id="fono">
+                <details><br>
+                    <summary>
+                        For Nothing
+                        <ul>
+                            <li>change force dmg to fire</li>
+                            <li>move creature 15ft on save fail</li>
+                        </ul>
+                    </summary>
+                    When you deal Force damage, you can choose to change the damage type to Fire (WHY). Additionally, when a creature fails a saving throw you forced it to make, you can move the creature up to 15 feet in a horizontal direction of your choice.
+                </details>
+            </div>
+            <div id="foev">
+                <details><br>
+                    <summary>
+                        For Everything
+                        <ul>
+                            <li>on save throw can add contact patron die</li>
+                        </ul>
+                    </summary>
+                    When forced to make a saving throw, you can now expand a charge from your Contact Patron ability, and add the dice roll to the saving throw.
+                </details>
+            </div>
+            <div id="vigi">
+                <details><br>
+                    <summary>
+                        Visitors' Gift
+                        <ul>
+                            <li>+5 ac</li>
+                        </ul>
+                    </summary>
+                    You gain +5 to AC. 
+                </details>
+            </div>
+            <div id="votr">
+                <details><br>
+                    <summary>
+                        Voidling Transformation
+                        <ul>
+                            <li>activate on bonus action or reaction to plane shift</li>
+                            <li>teleport 120ft on transform</li>
+                            <li>occupy space with ally without penalty</li>
+                            <li>others count as difficult terrain</li>
+                            <li>immunity to force and resistance to nonmagical physical dmg</li>
+                            <li>immune to involuntary plane shifting</li>
+                            <li>succeed saves against banish or similar effects</li>
+                            <li>void and abbyss creatures regard u as one of them</li>
+                            <li>1min duration paused in void and abyss</li>
+                        </ul>
+                    </summary>
+                    Starting at 14th level, as bonus action or as a reaction to getting plane shifted, you can transform into your Voidling form. When first transforming, you can teleport yourself to a location you can see within 120 feet of yourself. While you're transformed, you can occupy friendly creatures spaces without any penalty, and other creatures spaces count as difficult terrain. You have immunity to Force damage, and resistance to non-magical physical damage. You are immune to involuntary Plane shifting or teleportation, and automatically succeed saving throws from Banish spells or similar effects. Void and Abyss creatures will regard you as one of their own during the duration. This transformation has a duration of 1 minute, which you can stop as another bonus action. Stopping the transformation early saves the remaining time left in the transformation for later. While in the Void, or the Abyss, the transformation timer is paused. 
                 </details>
             </div>
         </main>
