--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="inline">
                 <h1>Floshe <a href="embra.html">Embra</a></h1>
                 <h2 id="level"></h2>
-                <h2>Class: Void Undead/Undying Celestial Fiend Warlock</h2>
+                <h2>Class: Ghost in the Machine Void Undead/Undying Celestial Fiend Warlock</h2>
                 <h2>Race: Locathah</h2>
                 <h2>Background: Courtier</h2>
                 <h2>Alignment: True Neutral</h2>
@@ -141,8 +141,6 @@
                     <h3><input type="number" id="cvnslt5" min="0" class="num"></h3>
                     <h3><input type="number" id="cvnslt6" min="0" class="num"></h3>
                     <h3><input type="number" id="cvnslt7" min="0" class="num"></h3>
-                    <h3><input type="number" id="cvnslt8" min="0" class="num"></h3>
-                    <h3><input type="number" id="cvnslt9" min="0" class="num"></h3>
                 </div>
                 <div class="list">
                     <h2>Cantrips</h2>
@@ -172,11 +170,11 @@
                     <h3>Melf's Minute Meteors</h3>
                     <h3>Revivify</h3>
                     <h3>Spirit Shroud</h3>
+                    <h3>Tongues</h3>
                     <h3>Dimension Door</h3>
                     <h3>Sickening Radiance</h3>
-                    <h3>Prayer of Healing</h3>
                     <h3>Death Ward</h3>
-                    <h3>Scrying</h3>
+                    <h3>Otiluke's Freezing Sphere</h3>
                 </div>
                 <div class="list">
                     <h2>Rituals</h2>
@@ -196,17 +194,25 @@
                     <h3>Tenser's Floating Disk</h3>
                     <h3>Unseen Servant</h3>
                     <h3>Wild Cunning</h3>
+                    <h3>Prayer of Healing</h3>
                     <h3>Wristpocket</h3>
                     <h3>Clairvoyance</h3>
+                    <h3>Feign Death</h3>
+                    <h3>Water Breathing</h3>
+                    <h3>Water Walk</h3>
                     <h3>Glyph of Warding</h3>
                     <h3>Modify Spell</h3>
                     <h3>Commune</h3>
+                    <h3>Commune with City</h3>
+                    <h3>Legend Lore</h3>
+                    <h3>Scrying</h3>
                     <h3>Teleportation Circle</h3>
                     <h3>Contingency</h3>
+                    <h3>Forbiddance</h3>
                 </div>
                 <div class="list">
                     <h2>Mystic Arcanum</h2>
-                    <h3>Forbiddance</h3>
+                    <h3>Disintegrate</h3>
                     <h3>Plane Shift</h3>
                     <h3>Sunburst</h3>
                     <h3>Foresight</h3>
@@ -216,7 +222,7 @@
                     <h3>Shield</h3>
                     <h3>Silvery Barbs</h3>
                     <h3>Calm Emotions</h3>
-                    <h3>Wither and Bloom</h3>
+                    <h3>Intrusive Thought</h3>
                     <h3>Counterspell</h3>
                     <h3>Sending</h3>
                     <h3>Banishment</h3>
@@ -230,7 +236,7 @@
                 <div class="list">
                     <h2>Currency</h2>
                     <h3>Bank: 39,648 GP</h3>
-                    <h3>Bag: 151,650 GP</h3>
+                    <h3>Bag: 151,549 GP</h3>
                 </div>
                 <div class="list">
                     <h2>Equipment</h2>
@@ -240,6 +246,7 @@
                     <h3>Rod of the Pact Keeper +3 <input type="checkbox" id="rod" class="check"></h3>
                     <h3>Bag of Holding</h3>
                     <h3>Sabine's Gas Mask</h3>
+                    <h3>Hazel's Sniper Rifle</h3>
                 </div>
                 <div class="list">
                     <h2>Items</h2>
@@ -249,7 +256,7 @@
                     <h3>Parchment</h3>
                     <h3>Ink Pen</h3>
                     <h3>Gasoline 1gal</h3>
-                    <h3>Camera</h3>
+                    <h3>Cameras</h3>
                     <h3>Nathan's Paper</h3>
                     <h3>Maid's Stopwatch</h3>
                     <h3>Hazel's Tablet</h3>
@@ -257,19 +264,25 @@
                     <h3>Silla's Contract<h3>
                     <h3>Nameless' Poem</h3>
                     <h3>Crayons</h3>
+                    <h3>Melanite's/Sandstorm's/Mars' Keys</h3>
+                    <h3>Neon Veil Tablet</h3>
                 </div>
                 <div class="list">
                     <h2>Potions</h2>
                     <h3>Supreme Healing</h3>
                     <h3>Eagle's Splendor <input type="checkbox" id="potEag" class="check"></h3>
+                    <h3>Haste</h3>
                 </div>
                 <div class="list">
                     <h2>Glyphs</h2>
                     <h3>Prismatic Wall</h3>
                     <h3>Astral Projection</h3>
                     <h3>Gate</h3>
-                    <h3>Spirit Shroud</h3>
+                    <h3>Spirit Shroud (Lvl 9)</h3>
                     <h3>Meteor Swarm</h3>
+                    <h3>Dark Star</h3>
+                    <h3>Scorching Ray (Lvl 9)</h3>
+                    <h3>Time Stop</h3>
                 </div>
             </div>
             <div class="inline">
@@ -307,18 +320,26 @@
                     <h3><a href="feature.html#setr">Seraph Transformation</a> <input type="checkbox" id="transSera" class="check"></h3>
                 </div>
                 <div class="list">
-                    <h2><a href="feature.html#unun"></a>Undead/Undying</h2>
-                    <h3><a href="feature.html#nody"></a>Not Dead Yet</h3>
-                    <h3><a href="feature.html#sofi"></a>Soul Fire</h3>
-                    <h3><a href="feature.html#untf"></a>Undying Transformation <input type="checkbox" id="transUnd" class="check"></h3>
-                    <h3><a href="feature.html#yoce"></a>Your Contract has Expired <input type="number" id="yche" min="0" class="num"></h3>
+                    <h2>Undead/Undying</h2>
+                    <h3><a href="feature.html#nody">Not Dead Yet</a></h3>
+                    <h3><a href="feature.html#sofi">Soul Fire</a></h3>
+                    <h3><a href="feature.html#untf">Undying Transformation</a> <input type="checkbox" id="transUnd" class="check"></h3>
+                    <h3><a href="feature.html#yoce">Your Contract has Expired</a> <input type="number" id="yche" min="0" class="num"></h3>
                 </div>
                 <div class="list">
                     <h2>Void</h2>
-                    <h3>For Nothing</h3>
-                    <h3>For Everything</h3>
-                    <h3>Visitors' Gift</h3>
-                    <h3>Voidling Transformation <input type="checkbox" id="transVoid" class="check"></h3>
+                    <h3><a href="feature.html#fono">For Nothing</a></h3>
+                    <h3><a href="feature.html#foev">For Everything</a></h3>
+                    <h3><a href="feature.html#vigi">Visitors' Gift</a></h3>
+                    <h3><a href="feature.html#votr">Voidling Transformation</a> <input type="checkbox" id="transVoid" class="check"></h3>
+                </div>
+                <div class="list">
+                    <h2>Ghost in the Machine</h2>
+                    <h3>Information Surge</h3>
+                    <h3>Wire Walk</h3>
+                    <h3>Personal Encryption</h3>
+                    <h3>Construct Transformation <input type="checkbox" id="transMach" class="check"></h3>
+                    <h3>Cyber Subjugation</h3>
                 </div>
                 <div class="list">
                     <h2>Contracts</h2>
@@ -326,6 +347,7 @@
                     <h3>Yoink or Yeet</h3>
                     <h3>Deal with the Devil</h3>
                     <h3>Wow This Place Sucks</h3>
+                    <h3>Gwen's Ultimatum</h3>
                 </div>
                 <div class="list">
                     <h2>Feats</h2>
@@ -350,8 +372,13 @@
                 </div>
                 <div class="list">
                     <h2>Epic Boons</h2>
-                    <h3>Boon of Multisubclass x3</h3>
+                    <h3>Boon of Multisubclass x4</h3>
                     <h3>Boon of Even Higher Magic</h3>
+                </div>
+                <div class="list">
+                    <h2>Warlocks</h2>
+                    <h3>Kazemaru (Undead/Undying)</h3>
+                    <h3>Lazy (Void)</h3>
                 </div>
             </div>
         </main>
