--- a/index.html
+++ b/index.html
@@ -306,40 +306,40 @@
                     <h3>Transformations</h3>
                 </div>
                 <div class="list">
-                    <h2>Fiend</h2>
+                    <h2><a href="feat.html#fiend">Fiend</a></h2>
                     <h3><a href="feat.html#rota">Resilience of the Archfiend</a></h3>
                     <h3><a href="feat.html#braf">Brimstone Affinity</a> <input type="number" id="affBrim" min="0" class="num"></h3>
                     <h3><a href="feat.html#brtr">Brimstone Transformation</a> <input type="checkbox" id="transBrim" class="check"></h3>
                     <h3><a href="feat.html#brcr">Brimstone Crags</a> <input type="checkbox" id="domBrim" class="check"></h3>
                 </div>
                 <div class="list">
-                    <h2>Celestial</h2>
+                    <h2><a href="feat.html#celestial">Celestial</a></h2>
                     <h3><a href="feat.html#heli">Healing Light</a> <input type="number" id="healLit" min="0" class="num"></h3>
                     <h3><a href="feat.html#raso">Radiant Soul</a></h3>
                     <h3><a href="feat.html#seto">Seraphim's Touch</a> <input type="number" id="touchSera" min="0" class="num"></h3>
                     <h3><a href="feat.html#setr">Seraph Transformation</a> <input type="checkbox" id="transSera" class="check"></h3>
                 </div>
                 <div class="list">
-                    <h2>Undead/Undying</h2>
+                    <h2><a href="feat.html#undeath">Undead/Undying</a></h2>
                     <h3><a href="feat.html#nody">Not Dead Yet</a></h3>
                     <h3><a href="feat.html#sofi">Soul Fire</a></h3>
                     <h3><a href="feat.html#untf">Undying Transformation</a> <input type="checkbox" id="transUnd" class="check"></h3>
                     <h3><a href="feat.html#yoce">Your Contract has Expired</a> <input type="number" id="yche" min="0" class="num"></h3>
                 </div>
                 <div class="list">
-                    <h2>Void</h2>
+                    <h2><a href="feat.html#void">Void</a></h2>
                     <h3><a href="feat.html#fono">For Nothing</a></h3>
                     <h3><a href="feat.html#foev">For Everything</a></h3>
                     <h3><a href="feat.html#vigi">Visitors' Gift</a></h3>
                     <h3><a href="feat.html#votr">Voidling Transformation</a> <input type="checkbox" id="transVoid" class="check"></h3>
                 </div>
                 <div class="list">
-                    <h2>Ghost in the Machine</h2>
-                    <h3>Information Surge</h3>
-                    <h3>Wire Walk</h3>
-                    <h3>Personal Encryption</h3>
-                    <h3>Construct Transformation <input type="checkbox" id="transMach" class="check"></h3>
-                    <h3>Cyber Subjugation</h3>
+                    <h2><a href="feat.html#machine">Ghost in the Machine</a></h2>
+                    <h3><a href="feat.html#insu">Information Surge</a></h3>
+                    <h3><a href="feat.html#wiwa">Wire Walk</a></h3>
+                    <h3><a href="feat.html#peen">Personal Encryption</a></h3>
+                    <h3><a href="feat.html#cotr">Construct Transformation</a> <input type="checkbox" id="transMach" class="check"></h3>
+                    <h3><a href="feat.html#cysu">Cyber Subjugation</a></h3>
                 </div>
                 <div class="list">
                     <h2>Contracts</h2>
