--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <h3>Revivify</h3>
                     <h3>Spirit Shroud</h3>
                     <h3>Tongues</h3>
-                    <h3>Dimension Door</h3>
+                    <h3>Arcane Eye</h3>
                     <h3>Sickening Radiance</h3>
                     <h3>Death Ward</h3>
                     <h3>Otiluke's Freezing Sphere</h3>
@@ -205,6 +205,7 @@
                     <h3>Commune</h3>
                     <h3>Commune with City</h3>
                     <h3>Legend Lore</h3>
+                    <h3>Rary's Telepathic Bond</h3>
                     <h3>Scrying</h3>
                     <h3>Teleportation Circle</h3>
                     <h3>Contingency</h3>
@@ -213,7 +214,7 @@
                 <div class="list">
                     <h2>Mystic Arcanum</h2>
                     <h3>Disintegrate</h3>
-                    <h3>Plane Shift</h3>
+                    <h3>Crown of Stars</h3>
                     <h3>Sunburst</h3>
                     <h3>Foresight</h3>
                 </div>
@@ -221,14 +222,18 @@
                     <h2>Coven</h2>
                     <h3>Shield</h3>
                     <h3>Silvery Barbs</h3>
-                    <h3>Calm Emotions</h3>
+                    <h3>Alter Self</h3>
                     <h3>Intrusive Thought</h3>
                     <h3>Counterspell</h3>
                     <h3>Sending</h3>
                     <h3>Banishment</h3>
-                    <h3>Polymorph</h3>
-                    <h3>Immolation</h3>
-                    <h3>Teleportation Circle</h3>
+                    <h3>Dimension Door</h3>
+                    <h3>Magic Mirror</h3>
+                    <h3>Temporal Shunt</h3>
+                    <h3>Wind Walk</h3>
+                    <h3>Forbiddance</h3>
+                    <h3>Power Word Fortify</h3>
+                    <h3>Plane Shift</h3>
                 </div>
             </div>
             <div class="inline">
